# freeclaw

./: .gitignore  README.md  pyproject.toml
freeclaw/: README.md  agent.py  agents.py  cli.py  cli_parser.py  config.py  dotenv.py  google_oauth.py  http_client.py  logging_utils.py  onboarding.py  paths.py
freeclaw/freeclaw/: agent.py  cli.py  cli_parser.py  common.py  dotenv.py  google_guide.py  google_oauth.py  http_client.py  logging_utils.py  onboarding.py  requirements.txt  skills.py
freeclaw/freeclaw/integrations/: discord_bot.py
freeclaw/freeclaw/providers/: common.py  groq.py  nim.py  openrouter.py
freeclaw/freeclaw/tools/: __init__.py  custom.py  doc_ingest.py  google_local.py  http.py  memory.py  registry.py  search.py  shell.py  task_scheduler.py  timer_api.py  web.py
freeclaw/integrations/: __init__.py  discord_bot.py
freeclaw/providers/: groq.py  nim.py  openrouter.py
freeclaw/tools/: custom.py  doc_ingest.py  fs.py  google_local.py  memory.py  registry.py  shell.py  task_scheduler.py
tests/: conftest.py  test_agent.py  test_config.py  test_tools_fs.py  test_tools_memory.py  test_tools_task_scheduler.py  test_tools_web.py
